@@ -10,7 +10,8 @@ void mg_switch_page (int relative, int num);
 void mg_move_tab (GtkWidget *button, int delta);
 void mg_bring_tofront (GtkWidget *button);
 void mg_userlist_showhide (session *sess, int show);
-void mg_showhide_topic (session *sess);
+void mg_chanmodebuttons_showhide (session *sess, int show);
+void mg_topic_showhide (session *sess);
 void mg_userlist_toggle (void);
 void mg_set_topic_tip (session *sess);
 GtkWidget *mg_create_generic_tab (char *name, char *title, int force_toplevel, int link_buttons, void *close_callback, void *userdata, int width, int height, GtkWidget **vbox_ret, void *family);
